# oncall_bot

./: Cargo.toml  docker-compose.yaml
api/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile
api/migrations/2022-04-02-192840_oncall_syncs/: down.sql  up.sql
api/src/: cache.rs  db.rs  main.rs  models.rs  notifier.rs  opsgenie.rs  schema.rs  slack.rs  sync.rs  user_group_sync.rs
migrations/2022-04-02-192840_oncall_syncs/: down.sql  up.sql
src/: db.rs  main.rs  models.rs  opsgenie.rs  schema.rs  slack.rs  sync.rs
web/: Dockerfile  Makefile  nginx.conf  package.json  tsconfig.json
web/public/: index.html
web/src/: Api.ts  App.tsx  Header.tsx  Home.tsx  Oncalls.tsx  State.ts  Users.tsx  index.tsx  setupProxy.js
web/src/components/: LoadCard.tsx  NotificationBox.tsx  OncallCard.tsx  OncallDialog.tsx  UserCard.tsx  UserMapDialog.tsx  UserMapSyncBox.tsx
