[package]
name = "oncall_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
anyhow = "1.0.56"
dotenv = "0.15.0"
reqwest = "0.11.10"
thiserror = "1.0.30"
tokio = { version = "1.17.0", features = ["full"] }
